Added fragment and list blog post components for views

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -5,6 +5,7 @@
 @use 'components/form/form-textarea';
 @use 'components/form/logging-form';
 @use 'components/form/searchbar';
+@use 'components/fragment/blog-post-fragment';
 @use 'components/link/icon-link';
 @use 'components/list/button-list';
 @use 'components/list/icon-button-list';
