--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
   padding: 1rem;
 }
 .blog-post-card__author-date {
@@ -184,6 +185,37 @@
   background: none;
   border: none;
   color: white;
+}
+
+.blog-post-fragment {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+.blog-post-fragment__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.blog-post-fragment__thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  aspect-ratio: 4/3;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px dashed white;
+  font-size: 1.2rem;
+}
+.blog-post-fragment__metadata {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.blog-post-fragment__content img {
+  width: 60%;
 }
 
 .icon-link {
@@ -448,37 +480,6 @@
 
 .tox.tox-tinymce {
   min-height: 100%;
-}
-
-.blog-post-preview {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-}
-.blog-post-preview__title {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.blog-post-preview__thumbnail {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  aspect-ratio: 4/3;
-  margin-left: auto;
-  margin-right: auto;
-  border: 2px dashed white;
-  font-size: 1.2rem;
-}
-.blog-post-preview__metadata {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.blog-post-preview__content img {
-  width: 60%;
 }
 
 .blog-post-page {
