--- a/views/components/button/iconButton.pug
+++ b/views/components/button/iconButton.pug
@@ -1,4 +1,5 @@
 mixin iconButton(classId, icon, label=null)
+    - console.log(attributes)
     button.icon-button(class=classId)&attributes(attributes)
         .icon-button__icon
             img(src=icon)
