--- a/views/components/card/blogPostCard.pug
+++ b/views/components/card/blogPostCard.pug
@@ -16,7 +16,7 @@ mixin blogPostCard(blogPost)
           'icon': '/images/commentIcon.png',
           'label': blogPost.comments.length
         }
-      )(class='-column -small')
+      )(class='-column -small -center')
     .blog-post-card__overview
       .blog-post-card__author-date
         .blog-post-card__author-details
