--- a/views/pages/userBlogPosts.pug
+++ b/views/pages/userBlogPosts.pug
@@ -41,5 +41,5 @@ block page
                     )(button='-tab')
                 .user-blog-posts__tab-container
                     +blogPostList(blogPosts)
-            .user-blog-posts__right
+            .user-blog-posts__right.-hidden
                 +blogPostFragment()
