--- a/public/stylesheets/layouts/_toolbars.scss
+++ b/public/stylesheets/layouts/_toolbars.scss
@@ -10,6 +10,7 @@
     padding: 1rem;
     height: 8vh;
     min-height: 4rem;
+    width: 100%;
     z-index: 10;
     border-bottom: 2px solid colors.$bg2;
     background-color: colors.$bg0;
@@ -41,6 +42,7 @@
     justify-content: center;
     overflow: auto;
     min-height: 100vh;
+    width: 80%;
 }
 
 .sidebar {
