--- a/public/stylesheets/pages/_user-blog-posts.scss
+++ b/public/stylesheets/pages/_user-blog-posts.scss
@@ -1,17 +1,36 @@
+@use '../globals/colors';
+
 .user-blog-posts-page {
-    width: 80%;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    width: 100%;
+
+    &__heading {
+        text-align: center;
+    }
 
     &__toolbar {
         display: flex;
         align-items: center;
-        gap: 1rem;
+        gap: 2rem;
+        margin-bottom: 2rem;
     }
 }
 
 .user-blog-posts {
-    &__left {
+    display: flex;
 
+    &__left {
+        flex: 1;
+    }
+
+    &__right {
+        flex: 1;
+
+        &.-hidden {
+            visibility: hidden;
+        }
+    }
+
+    &__tab-container {
+        border: 2px solid colors.$bg2;
     }
 }
