--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,12 +72,9 @@
   font-size: 1.5rem;
 }
 .blog-post-card__preview {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+  max-height: 2rem;
   margin: 0;
-  width: 100%;
+  overflow: hidden;
 }
 .blog-post-card__keywords-container {
   display: flex;
@@ -89,12 +86,10 @@
   margin-bottom: -10px;
 }
 .blog-post-card__keywords {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+  max-height: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  overflow: hidden;
 }
 .blog-post-card.-small {
   height: 16rem;
@@ -141,6 +136,10 @@
   margin-top: 1rem;
   color: red;
   font-weight: bold;
+}
+
+.form-select__select {
+  margin-left: 1rem;
 }
 
 .form-textarea {
@@ -248,6 +247,36 @@
   font-size: 1.5rem;
 }
 
+.blog-post-list .blog-post-item:last-child {
+  border-bottom: none;
+}
+
+.blog-post-item {
+  padding: 0.5rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.blog-post-item:hover {
+  background-color: rgb(54, 54, 54);
+}
+.blog-post-item__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.blog-post-item__bottom {
+  display: flex;
+  justify-content: space-between;
+}
+.blog-post-item__title {
+  font-size: 1.2rem;
+}
+.blog-post-item__date-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .button-list {
   display: flex;
 }
@@ -267,7 +296,6 @@
 
 .icon-list {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 3rem;
 }
@@ -288,6 +316,9 @@
 }
 .icon-list.-small .icon-list__label {
   font-size: 0.8rem;
+}
+.icon-list.-center {
+  justify-content: center;
 }
 
 .account-sidebar {
@@ -368,6 +399,7 @@
   padding: 1rem;
   height: 8vh;
   min-height: 4rem;
+  width: 100%;
   z-index: 10;
   border-bottom: 2px solid rgb(36, 36, 36);
   background-color: black;
@@ -396,6 +428,7 @@
   justify-content: center;
   overflow: auto;
   min-height: 100vh;
+  width: 80%;
 }
 
 .sidebar {
@@ -417,7 +450,7 @@
 .blog-post-form-page {
   display: flex;
   align-items: flex-start;
-  width: 80%;
+  width: 100%;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
@@ -486,7 +519,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 80%;
+  width: 100%;
   padding: 1rem;
 }
 .blog-post-page__post-blog-post-heading {
@@ -532,23 +565,44 @@
   width: 75%;
 }
 
+.index-page {
+  width: 100%;
+}
 .index-page__blog-post-card-pair {
   margin-top: 2rem;
 }
 
 .user-blog-posts-page {
-  width: 80%;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  width: 100%;
+}
+.user-blog-posts-page__heading {
+  text-align: center;
 }
 .user-blog-posts-page__toolbar {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.user-blog-posts {
+  display: flex;
+}
+.user-blog-posts__left {
+  flex: 1;
+}
+.user-blog-posts__right {
+  flex: 1;
+}
+.user-blog-posts__right.-hidden {
+  visibility: hidden;
+}
+.user-blog-posts__tab-container {
+  border: 2px solid rgb(36, 36, 36);
 }
 
 .profile-page {
-  width: 80%;
+  width: 100%;
 }
 .profile-page__heading {
   text-align: center;
@@ -651,6 +705,9 @@ a.-button:hover {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0;
   min-height: 100vh;
   background-color: rgb(18, 18, 18);
