--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2,6 +2,7 @@
 @use 'components/card/blog-post-card';
 @use 'components/card/comment-card';
 @use 'components/form/form-input';
+@use 'components/form/form-select';
 @use 'components/form/form-textarea';
 @use 'components/form/logging-form';
 @use 'components/form/searchbar';
@@ -65,6 +66,9 @@ a {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0;
   min-height: 100vh;
   background-color: colors.$bg1;
