--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -1,29 +1,40 @@
 include iconList
+include iconButtonList
 
 mixin blogPostList(blogPosts)
     ul.blog-post-list&attributes(attributes)
         each blogPost in blogPosts
-            li.blog-post-list__item
+            li.blog-post-item
                 .blog-post-item__top 
-                    .blog-post-item__title
+                    .blog-post-item__title= blogPost.title
                     .blog-post-item__date-group
-                        .blog-post-item__date
-                        .blog-post-item__date
+                        .blog-post-item__date= `Published: ${blogPost.publish_date}`
+                        .blog-post-item__date= `Last modified: ${blogPost.last_modified_date}`
                 .blog-post-item__bottom
                     +iconList(
                         {
-                        'icon': '/images/likeIcon.png',
-                        'label': blogPost.likes
+                            'icon': '/images/likeIcon.png',
+                            'label': blogPost.likes
                         },
                         {
-                        'icon': '/images/dislikeIcon.png',
-                        'label': blogPost.dislikes
+                            'icon': '/images/dislikeIcon.png',
+                            'label': blogPost.dislikes
                         },
                         {
-                        'icon': '/images/commentIcon.png',
-                        'label': blogPost.comments.length
+                            'icon': '/images/commentIcon.png',
+                            'label': blogPost.comments.length
                         }
                     )(class='-small')
+                    +iconButtonList(
+                        {
+                            'classId': `blog-post-item__edit-button-${blogPost._id}`,
+                            'icon': '/images/editIcon.png'
+                        },
+                        {
+                            'classId': `blog-post-item__delete-button-${blogPost._id}`,
+                            'icon': '/images/deleteIcon.png'
+                        },
+                    )(iconButton = { 'class': ['-small', '-colorful'] })
                 
                 
                 
