--- a/views/components/form/formSelect.pug
+++ b/views/components/form/formSelect.pug
@@ -1,5 +1,5 @@
-mixin formSelect(name, options)
-    .form-select&attributes(attributes.formSelect)
+mixin formSelect(name, options, attrs={})
+    .form-select&attributes(attrs.formSelect)
         - const labelWords = name.split('-')
         each word, index in labelWords
             - labelWords[index] = word[0].toUpperCase() + word.slice(1)
@@ -10,7 +10,7 @@ mixin formSelect(name, options)
         select.form-select__select(
             id=name
             name=name
-        )&attributes(attributes.select)
+        )&attributes(attrs.select)
             each option in options
                 - const optionWords = option.split('-')
                 each word, index in optionWords
