--- a/views/components/list/iconButtonList.pug
+++ b/views/components/list/iconButtonList.pug
@@ -1,14 +1,13 @@
 include ../button/iconButton
 
-mixin iconButtonList(...buttonItems)
-    - console.log(attributes)
-    - console.log(attributes.iconButton)
-    ul.icon-button-list&attributes(attributes.iconButtonList)
+mixin iconButtonList(buttonItems, attrs={})
+    ul.icon-button-list&attributes(attrs.iconButtonList)
         each item in buttonItems
             li.icon-button-list__item
                 - item.label = item.label ?? null
                 +iconButton(
                     item.classId,
                     item.icon,  
-                    item.label
-                )(attributes.iconButton)
+                    item.label,
+                    attrs.iconButton
+                )
