--- a/views/layouts/author.pug
+++ b/views/layouts/author.pug
@@ -6,9 +6,17 @@ block navbar
     .navbar__left
         +iconButton(
             'navbar__content-button',
-            '/images/burgerIcon.png'
-        )(class='-burger')
-        +iconLink('/images/favicon.png', '/', 'Tech Stack')
+            '/images/burgerIcon.png',
+            null,
+            {
+                'class': '-burger'
+            }
+        )
+        +iconLink(
+            '/images/favicon.png', 
+            '/', 
+            'Tech Stack'
+        )
         .navbar__message Draft by #{mainUser.username}
     .navbar__right
         button(
@@ -18,8 +26,12 @@ block navbar
         ) Publish
         +iconButton(
             'navbar__account-button',
-            '/images/profileIcon.png'
-        )(class='-avatar')
+            '/images/profileIcon.png',
+            null,
+            {
+                'class': '-avatar'
+            }
+        )
     
 block sidebars
     include ../components/toolbar/contentSidebar
