--- a/public/stylesheets/components/list/_blog-post-list.scss
+++ b/public/stylesheets/components/list/_blog-post-list.scss
@@ -36,4 +36,9 @@
         flex-direction: column;
         justify-content: space-between;
     }
+
+    &__actions {
+        display: flex;
+        gap: 2rem;
+    }
 }
