--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -73,7 +73,7 @@ block page
                             }
                         )
 
-                    .blog-post-form__content.-hidden
+                    .blog-post-form__content.-gone
                         +formTextarea(
                             'content',
                             inputs.content || '',
