--- a/views/components/fragment/blogPostFragment.pug
+++ b/views/components/fragment/blogPostFragment.pug
@@ -1,5 +1,5 @@
-mixin blogPostFragment(blogPost={})
-    .blog-post-fragment
+mixin blogPostFragment(blogPost={}, attrs={})
+    .blog-post-fragment&attributes(attrs)
         .blog-post-fragment__metadata
             .blog-post-fragment__title= blogPost.title || ''
             if blogPost.thumbnail
