--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -1,26 +1,30 @@
 include iconList
-include iconButtonList
+include ../button/iconButton
+include ../link/iconLink
 
 mixin blogPostList(blogPosts, attrs={})
     ul.blog-post-list&attributes(attrs)
         each blogPost in blogPosts
-            li.blog-post-item
+            li.blog-post-item(id=blogPost._id)
                 .blog-post-item__top 
                     .blog-post-item__title= blogPost.title
                     .blog-post-item__date-group
-                        .blog-post-item__date= `Published: ${blogPost.publish_date}`
-                        .blog-post-item__date= `Last modified: ${blogPost.last_modified_date}`
+                        .blog-post-item__published= `Published: ${blogPost.publish_date}`
+                        .blog-post-item__last-modified= `Last modified: ${blogPost.last_modified_date}`
                 .blog-post-item__bottom
                     +iconList(
                         [{
+                            'classId': 'blog-post-item__likes',
                             'icon': '/images/likeIcon.png',
                             'label': blogPost.likes
                         },
                         {
+                            'classId': 'blog-post-item__dislikes',
                             'icon': '/images/dislikeIcon.png',
                             'label': blogPost.dislikes
                         },
                         {
+                            'classId': 'blog-post-item__total-comments',
                             'icon': '/images/commentIcon.png',
                             'label': blogPost.comments.length
                         }],
@@ -28,19 +32,16 @@ mixin blogPostList(blogPosts, attrs={})
                             'class': '-small'
                         }
                     )
-                    +iconButtonList(
-                        [{
-                            'classId': `blog-post-item__edit-button-${blogPost._id}`,
-                            'icon': '/images/editIcon.png'
-                        },
-                        {
-                            'classId': `blog-post-item__delete-button-${blogPost._id}`,
-                            'icon': '/images/deleteIcon.png'
-                        }],
-                        {
-                            'iconButton': {'class': '-small -colorful'}
-                        }
-                    )
-                
-                
-                
+                    .blog-post-item__actions
+                        +iconLink(
+                            '/images/editIcon.png',
+                            `/users/${mainUser.username}/blog-posts/${blogPost._id}`,
+                            null,
+                            {'class': '-small -button -slim'}
+                        )
+                        +iconButton(
+                            'blog-post-item__delete-button',
+                            '/images/deleteIcon.png',
+                            null,
+                            {'class': '-small -colorful'}
+                        )
